--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,14 +6,9 @@
     <th>Price
     <th>Customer</th>  
   </tr>
+
+  <%= render @orders || "No Orders" %>
   <% @orders.each do |order| %>
-    <% order.products.each do |product| %>
-      <tr>
-        <td><%= order.id %></td>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= order.customer.name %></td>
-      </tr>
-    <% end %>
+
   <% end %>
 </table>
